# normaldistrib

./: README.md  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
src/: normaldistrib.py
