[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "normaldistrib"
description = "Generate symmetric and asymmetric normal distributions"
license = "GPL-3.0-only"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Pablo A. Kler", email = "kler@cimec.unl.edu.ar"},
    {name = "Gabriel S. Gerlero", email = "ggerlero@cimec.unl.edu.ar"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development",
]
dependencies = [
    "numpy>=1,<3",
    "scipy>=1,<2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/microfluidica/normaldistrib"
Repository = "https://github.com/microfluidica/normaldistrib"

[dependency-groups]
lint = ["ruff"]
dev = [{include-group = "lint"}]

[tool.setuptools]
py-modules = ["normaldistrib"]

[tool.setuptools.dynamic]
version = {attr = "normaldistrib.__version__"}

[tool.ruff.lint]
extend-select = ["ALL"]
extend-ignore = [
    "ANN",
    "COM812",
    "D",
    "ISC001",
    "PLR0913",
]
